--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="resources/pic/BM-Logo.ico" rel="icon">
     <link href="resources/css/styles.css" rel="stylesheet">
     <link href="resources/css/cache.css" rel="stylesheet">
+    <script src="resources/js/ban-drag.js"></script>
 </head>
 <body>
     <!-- 临时色带 -->
