阻止背景拖拽

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 临时色带 -->
     <div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
     <!-- 临时色带 -->
-    <img alt="背景图片" src="resources/pic/bg.png">
+    <img alt="背景图片" src="resources/pic/bg.png" draggable="false">
     <div class="custom-button">
         <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
     </div>
