--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <link href="resources/pic/BM-Logo.ico" rel="icon">
     <link href="resources/css/styles.css" rel="stylesheet">
     <link href="resources/css/cache.css" rel="stylesheet">
-    <script src="resources/js/ban-drag.js"></script>
+    <script src="resources/js/ban-some-functions.js"></script>
+    <script src="resources/js/join-us-button.js"></script>
 </head>
 <body>
-    <!-- 临时色带 -->
-    <div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
-    <!-- 临时色带 -->
-    <img alt="背景图片" src="resources/pic/bg.png">
-    <div class="custom-button">
-        <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
-    </div>
+<!-- 临时色带 -->
+<div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
+<!-- 临时色带 -->
+<img alt="背景图片" src="resources/pic/bg.png">
+<div class="custom-button">加入我们</div>
 </body>
 </html>
