--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="resources/css/styles.css" rel="stylesheet">
     <link href="resources/css/cache.css" rel="stylesheet">
     <script src="resources/js/ban-some-functions.js"></script>
+    <script src="resources/js/join-us-button.js"></script>
 </head>
 <body>
 <!-- 临时色带 -->
