--- a/index.html
+++ b/index.html
@@ -8,11 +8,33 @@
     <link href="resources/css/cache.css" rel="stylesheet">
     <script src="resources/js/ban-some-functions.js"></script>
     <script src="resources/js/join-us-button.js"></script>
+
+    <style>
+        .rgn {
+            position: relative; /* 使 .rgn 容器成为定位元素 */
+            padding: 10px; /* 添加内边距 */
+            max-width: 100%; /* 确保容器的最大宽度为100% */
+        }
+        .title {
+            color: aqua;
+            font-size: 2rem;
+            margin: 2rem;
+            position: relative; /* 使 .title 成为定位元素 */
+            z-index: 1; /* 控制文本显示的层级 */
+        }
+    </style>
 </head>
 <body>
 <!-- 临时色带 -->
 <div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
 <!-- 临时色带 -->
+
+<div class="page-1-rgn">
+
+    <div class="title">标题</div>
+
+</div>
+
 <img alt="背景图片" src="resources/pic/bg.png" draggable="false">
 <div class="custom-button">加入我们</div>
 </body>
