--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
     <link href="resources/css/cache.css" rel="stylesheet">
     <script src="resources/js/ban-some-functions.js"></script>
     <script src="resources/js/join-us-button.js"></script>
-
-
 </head>
 <body>
 <!-- 临时色带 -->
 <div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
 <!-- 临时色带 -->
-
 <div class="page-1-rgn">
-
     <div class="title">标题</div>
-
 </div>
-
-<img alt="背景图片" src="resources/pic/bg.png" draggable="false">
+<img alt="背景图片" draggable="false" src="resources/pic/bg.png">
 <div class="custom-button">加入我们</div>
 </body>
 </html>
