更改标题颜色

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
 <!-- 临时色带 -->
 <div class="page-1-rgn">
-    <div class="title"><span class="text-black">欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span class="text-black">服务器！</span></span></div>
+    <div class="title"><span class="text-white">欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span class="text-white">服务器！</span></span></div>
 </div>
 <img alt="背景图片" draggable="false" src="resources/pic/bg.png">
 <div class="custom-button">加入我们</div>
