--- a/index.html
+++ b/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blue-Millennium 服务器</title>
+    <title>Blue-Millennium | 首页</title>
     <link href="resources/pic/BM-Logo.ico" rel="icon">
     <link href="resources/css/styles.css" rel="stylesheet">
-    <link href="resources/css/cache.css" rel="stylesheet">
+    <link href="resources/css/menu.css" rel="stylesheet">
     <script src="resources/js/ban-some-functions.js"></script>
     <script src="resources/js/join-us-button.js"></script>
 </head>
 <body>
-<!-- 临时色带 -->
-<div class="early-stage-banner">网页仍然在早期制作阶段，敬请期待</div>
-<!-- 临时色带 -->
+<header>
+    <nav class="menu">
+        <ul>
+            <li><a href="">首页</a></li>
+            <li><a href="about-us.html">关于我们</a></li>
+            <li><a href="https://status.blue-millennium.fun/">服务情况</a></li>
+            <li>
+                <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 <div class="page-1-rgn">
-    <div class="title"><span class="text-white">欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span class="text-white">服务器！</span></span></div>
+    <div class="title"><span class="text-white">欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span
+            class="text-white">服务器！</span></div>
 </div>
 <img alt="背景图片" draggable="false" src="resources/pic/bg.png">
 <div class="custom-button">加入我们</div>
