--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <nav class="menu">
         <ul>
-            <li><a href="">首页</a></li>
+            <li><a href="index.html">首页</a></li>
             <li><a href="about-us.html">关于我们</a></li>
             <li><a href="https://status.blue-millennium.fun/">服务情况</a></li>
             <li>
