更新星咸鱼的B站账号

--- a/about-us.html
+++ b/about-us.html
@@ -51,11 +51,11 @@
             <img alt="副服主1" src="resources/pic/OP/Xianyu.jpg">
             <h3>☆星咸鱼♪</h3>
             <p>副服主</p>
-<!--            <div class="social-icons">
-                <a href="https://space.bilibili.com/" target="_blank"><i class="fab fa-bilibili"
+            <div class="social-icons">
+                <a href="https://space.bilibili.com/108416034" target="_blank"><i class="fab fa-bilibili"
                                                                          style="font-size: 24px;"></i></a>
-                <a href="https://github.com/" target="_blank"><i class="fab fa-github" style="font-size: 24px;"></i></a>
-            </div>-->
+<!--                <a href="https://github.com/" target="_blank"><i class="fab fa-github" style="font-size: 24px;"></i></a>-->
+            </div>
         </div>
         <div class="team-member">
             <img alt="副服主2" src="resources/pic/OP/Tohka.jpg">
