CopyRight in index

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
 </div>
 <img alt="背景图片" draggable="false" src="resources/pic/bg.png">
 <div class="custom-button">加入我们</div>
+<footer>
+    <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
+</footer>
 </body>
 </html>
