--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,7 @@
     <link href="resources/css/menu.css" rel="stylesheet">
     <link href="resources/css/about-us.css" rel="stylesheet">
     <link href="resources/css/op-flip.css" rel="stylesheet">
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 <header>
