--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,7 @@
     <link href="resources/css/about-us.css" rel="stylesheet">
     <link href="resources/css/op-flip.css" rel="stylesheet">
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+    <script src="resources/js/ban-some-functions.js"></script>
 </head>
 <body>
 <header>
