feat: 更新部分图标颜色、图标包

--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Blue-Millennium | 关于我们</title>
@@ -9,127 +10,141 @@
     <link href="resources/css/about-us.css" rel="stylesheet">
     <link href="resources/css/op-flip.css" rel="stylesheet">
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+
+    <!-- 引入 Material Icons 图标包 -->
+    <!-- Outlined -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
+
     <script src="resources/js/ban-some-functions.js"></script>
 </head>
+
 <body>
-<header>
-    <nav class="menu">
-        <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="about-us.html">关于我们</a></li>
-            <li><a href="https://status.blue-millennium.fun/">服务情况</a></li>
-            <li>
-                <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about-us.html">关于我们</a></li>
+                <li><a href="https://status.blue-millennium.fun/">服务情况</a></li>
+                <li>
+                    <a
+                        href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section class="hero">
-        <h1>欢迎来到 Blue-Millennium</h1>
-        <p>这里是关于我们的介绍页面。</p>
-    </section>
+    <main>
+        <section class="hero">
+            <h1>欢迎来到 Blue-Millennium</h1>
+            <p>这里是关于我们的介绍页面。</p>
+        </section>
 
-    <section class="content">
-        <h2>我们的故事，才刚刚开始！</h2>
-        <p>Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月4日正式成立。</p>
-    </section>
+        <section class="content">
+            <h2>我们的故事，才刚刚开始！</h2>
+            <p>Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月4日正式成立。</p>
+        </section>
 
-    <section class="team">
-        <h2>我们的团队</h2>
-        <div id="team-members-container">
-            <div class="team-member">
-                <img alt="服主" src="resources/pic/OP/Suisuroru.jpg">
-                <h3>Suisuroru</h3>
-                <p>服主</p>
-                <div class="social-icons">
-                    <a href="https://space.bilibili.com/481194132" target="_blank"> <i class="fab fa-bilibili"
-                                                                                       style="font-size: 24px;"></i></a>
-                    <a href="https://github.com/Suisuroru" target="_blank"> <i class="fab fa-github"
-                                                                               style="font-size: 24px;"></i></a>
+        <section class="team">
+            <h2>我们的团队</h2>
+            <div id="team-members-container">
+                <div class="team-member">
+                    <img alt="服主" src="resources/pic/OP/Suisuroru.jpg">
+                    <h3>Suisuroru</h3>
+                    <p>服主</p>
+                    <div class="social-icons">
+                        <a href="https://space.bilibili.com/481194132" target="_blank"> <i class="fab fa-bilibili"
+                                style="font-size: 24px;"></i></a>
+                        <a href="https://github.com/Suisuroru" target="_blank"> <i class="fab fa-github"
+                                style="font-size: 24px;"></i></a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img alt="副服主1" src="resources/pic/OP/Xianyu.jpg">
+                    <h3>☆星咸鱼♪</h3>
+                    <p>副服主</p>
+                    <div class="social-icons">
+                        <a href="https://space.bilibili.com/108416034" target="_blank"><i class="fab fa-bilibili"
+                                style="font-size: 24px;"></i></a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img alt="副服主2" src="resources/pic/OP/Tohka.jpg">
+                    <h3>Tohka</h3>
+                    <p>副服主</p>
+                    <div class="social-icons">
+                        <a href="https://tohka.top" target="_blank">
+                            <!-- <img alt="Personal website"
+                                src="resources/pic/other-icon/E57C2AC4E2BFC84E42CCA0859508B1AC.png"
+                                style="width: 24px; height: 24px;"> -->
+                            <i class="material-icons-outlined icon-blue" style="font-size: 24px;">link</i>
+                        </a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员1" src="resources/pic/OP/Aris.jpg">
+                    <h3>夏泽千翼Novice</h3>
+                    <p>主要管理员</p>
+                    <div class="social-icons">
+                        <a href="https://space.bilibili.com/" target="_blank"> <i class="fab fa-bilibili"
+                                style="font-size: 24px;"></i></a>
+                        <a href="https://github.com/GLASS20" target="_blank"> <i class="fab fa-github"
+                                style="font-size: 24px;"></i></a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员2" src="resources/pic/OP/BigSevenFox.jpg">
+                    <h3>华花·门子</h3>
+                    <p>主要管理员</p>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员3" src="resources/pic/OP/Ayanamiii.jpg">
+                    <h3>……………………</h3>
+                    <p>主要管理员</p>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员4" src="resources/pic/OP/Super.jpg">
+                    <h3>真寻だいすき</h3>
+                    <p>管理员</p>
+                    <div class="social-icons">
+                        <a href="https://space.bilibili.com/524861913" target="_blank"> <i class="fab fa-bilibili"
+                                style="font-size: 24px;"></i></a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员5" src="resources/pic/OP/Panzi.jpg">
+                    <h3>潘子</h3>
+                    <p>管理员</p>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员6" src="resources/pic/OP/YC.jpg">
+                    <h3>银河球棒侠</h3>
+                    <p>管理员</p>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员7" src="resources/pic/OP/yucdRPG.gif">
+                    <h3>yucdRPG</h3>
+                    <p>特殊管理员</p>
+                </div>
+                <div class="team-member">
+                    <img alt="管理员8" src="resources/pic/OP/Sunaookami.jpg">
+                    <h3>Sunaookami</h3>
+                    <p>群聊管理员</p>
                 </div>
             </div>
-            <div class="team-member">
-                <img alt="副服主1" src="resources/pic/OP/Xianyu.jpg">
-                <h3>☆星咸鱼♪</h3>
-                <p>副服主</p>
-                <div class="social-icons">
-                    <a href="https://space.bilibili.com/108416034" target="_blank"><i class="fab fa-bilibili"
-                                                                                      style="font-size: 24px;"></i></a>
-                </div>
+            <div id="pagination">
+                <!-- <button disabled id="prev-page"><i class="fas fa-arrow-left"></i></button>
+                <button id="next-page"><i class="fas fa-arrow-right"></i></button> -->
+                <button disabled id="prev-page"><i class="icon-white material-icons-outlined">arrow_back</i></button>
+                <button id="next-page"><i class="icon-white material-icons-outlined">arrow_forward</i></button>
             </div>
-            <div class="team-member">
-                <img alt="副服主2" src="resources/pic/OP/Tohka.jpg">
-                <h3>Tohka</h3>
-                <p>副服主</p>
-                <div class="social-icons">
-                    <a href="https://tohka.top" target="_blank"><img
-                            alt="Personal website" src="resources/pic/other-icon/E57C2AC4E2BFC84E42CCA0859508B1AC.png"
-                            style="width: 24px; height: 24px;"></a>
-                </div>
-            </div>
-            <div class="team-member">
-                <img alt="管理员1" src="resources/pic/OP/Aris.jpg">
-                <h3>夏泽千翼Novice</h3>
-                <p>主要管理员</p>
-                <div class="social-icons">
-                    <a href="https://space.bilibili.com/" target="_blank"> <i class="fab fa-bilibili"
-                                                                              style="font-size: 24px;"></i></a>
-                    <a href="https://github.com/GLASS20" target="_blank"> <i class="fab fa-github"
-                                                                             style="font-size: 24px;"></i></a>
-                </div>
-            </div>
-            <div class="team-member">
-                <img alt="管理员2" src="resources/pic/OP/BigSevenFox.jpg">
-                <h3>华花·门子</h3>
-                <p>主要管理员</p>
-            </div>
-            <div class="team-member">
-                <img alt="管理员3" src="resources/pic/OP/Ayanamiii.jpg">
-                <h3>……………………</h3>
-                <p>主要管理员</p>
-            </div>
-            <div class="team-member">
-                <img alt="管理员4" src="resources/pic/OP/Super.jpg">
-                <h3>真寻だいすき</h3>
-                <p>管理员</p>
-                <div class="social-icons">
-                    <a href="https://space.bilibili.com/524861913" target="_blank"> <i class="fab fa-bilibili"
-                                                                                       style="font-size: 24px;"></i></a>
-                </div>
-            </div>
-            <div class="team-member">
-                <img alt="管理员5" src="resources/pic/OP/Panzi.jpg">
-                <h3>潘子</h3>
-                <p>管理员</p>
-            </div>
-            <div class="team-member">
-                <img alt="管理员6" src="resources/pic/OP/YC.jpg">
-                <h3>银河球棒侠</h3>
-                <p>管理员</p>
-            </div>
-            <div class="team-member">
-                <img alt="管理员7" src="resources/pic/OP/yucdRPG.gif">
-                <h3>yucdRPG</h3>
-                <p>特殊管理员</p>
-            </div>
-            <div class="team-member">
-                <img alt="管理员8" src="resources/pic/OP/Sunaookami.jpg">
-                <h3>Sunaookami</h3>
-                <p>群聊管理员</p>
-            </div>
-        </div>
-        <div id="pagination">
-            <button disabled id="prev-page"><i class="fas fa-arrow-left"></i></button>
-            <button id="next-page"><i class="fas fa-arrow-right"></i></button>
-        </div>
-    </section>
-</main>
+        </section>
+    </main>
 
-<footer>
-    <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
-</footer>
+    <footer>
+        <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
+    </footer>
 </body>
 <script src="resources/js/op-flip.js"></script>
+
 </html>
