feat: 更新字体包、改为内部引用字体

--- a/about-us.html
+++ b/about-us.html
@@ -9,12 +9,13 @@
     <link href="resources/css/menu.css" rel="stylesheet">
     <link href="resources/css/about-us.css" rel="stylesheet">
     <link href="resources/css/op-flip.css" rel="stylesheet">
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet"> -->
 
     <!-- 引入 Material Icons 图标包 -->
     <!-- Outlined -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
+    <link href="./resources/css/icon.css" rel="stylesheet">
 
     <script src="resources/js/ban-some-functions.js"></script>
 </head>
