删除弃用的文件

--- a/about-us.html
+++ b/about-us.html
@@ -9,14 +9,8 @@
     <link href="resources/css/menu.css" rel="stylesheet">
     <link href="resources/css/about-us.css" rel="stylesheet">
     <link href="resources/css/op-flip.css" rel="stylesheet">
-    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet"> -->
-
-    <!-- 引入 Material Icons 图标包 -->
-    <!-- Outlined -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-
-    <link href="./resources/css/icon.css" rel="stylesheet">
-
+    <link href="resources/css/icon.css" rel="stylesheet">
     <script src="resources/js/ban-some-functions.js"></script>
 </head>
 
@@ -75,9 +69,6 @@
                     <p>副服主</p>
                     <div class="social-icons">
                         <a href="https://tohka.top" target="_blank">
-                            <!-- <img alt="Personal website"
-                                src="resources/pic/other-icon/E57C2AC4E2BFC84E42CCA0859508B1AC.png"
-                                style="width: 24px; height: 24px;"> -->
                             <i class="material-icons-outlined icon-blue" style="font-size: 24px;">link</i>
                         </a>
                     </div>
@@ -128,8 +119,6 @@
                 </div>
             </div>
             <div id="pagination">
-                <!-- <button disabled id="prev-page"><i class="fas fa-arrow-left"></i></button>
-                <button id="next-page"><i class="fas fa-arrow-right"></i></button> -->
                 <button disabled id="prev-page"><i class="icon-white material-icons-outlined">arrow_back</i></button>
                 <button id="next-page"><i class="icon-white material-icons-outlined">arrow_forward</i></button>
             </div>
