--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="title"><span class="text-white">欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span
             class="text-white">服务器！</span></div>
 </div>
-<img alt="背景图片" draggable="false" src="resources/pic/bg.png">
+<img alt="背景图片" src="resources/pic/bg.png">
 <div class="custom-button">加入我们</div>
 <footer>
     <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
