feat: 更新“关于我们”页面名单

--- a/about-us.html
+++ b/about-us.html
@@ -113,6 +113,20 @@
                     <h3>Sunaookami</h3>
                     <p>群聊管理员</p>
                 </div>
+                <div class="team-member">
+                    <img alt="管理员9" src="resources/pic/OP/KFACBT.jpg">
+                    <h3>KFACBT</h3>
+                    <p>网站开发者</p>
+                    <div class="social-icons">
+                        <a href="https://space.bilibili.com/514279030" target="_blank"> <i class="fab fa-bilibili"
+                                style="font-size: 24px;"></i></a>
+                        <a href="https://github.com/gytxtx" target="_blank"> <i class="fab fa-github"
+                                style="font-size: 24px;"></i></a>
+                        <a href="https://gytxtx.github.io" target="_blank">
+                            <i class="material-icons-outlined icon-blue" style="font-size: 24px;">link</i>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div id="pagination">
                 <button disabled id="prev-page"><i class="icon-white material-icons-outlined">arrow_back</i></button>
