refactor(layout): 重构页面布局和样式
- 移除 about-us.css 和 styles.css 中的重复页脚样式
- 新增 footer.css 文件，统一处理页脚样式
- 更新 about-us.html 和 index.html，引入新的 footer.css
- 调整页脚位置，使其固定在页面底部
- 增加 GitHub 和 Tunite组织官网链接
- 优化页面布局，移除不必要的底部间距

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="resources/pic/BM-Logo.ico" rel="icon">
     <link href="resources/css/styles.css" rel="stylesheet">
     <link href="resources/css/menu.css" rel="stylesheet">
+    <link href="resources/css/footer.css" rel="stylesheet">
     <script src="resources/js/ban-some-functions.js"></script>
     <script src="resources/js/join-us-button.js"></script>
 </head>
@@ -15,7 +16,7 @@
         <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about-us.html">关于我们</a></li>
-            <li><a href="https://status.blue-millennium.fun/">服务情况</a></li>
+            <li><a href="https://status.blue-millennium.fun" target="_blank">服务情况</a></li>
             <li>
                 <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
             </li>
@@ -28,8 +29,11 @@
 </div>
 <img alt="背景图片" src="resources/pic/bg.png">
 <div class="custom-button">加入我们</div>
-<footer>
+<footer class="fixed">
     <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
+    <a class="text-blue" href="https://github.com/Blue-Millennium" target="_blank">GitHub</a>
+    <a>&emsp;</a>
+    <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite组织官网</a>
 </footer>
 </body>
 </html>
