--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Blue-Millennium | 关于我们</title>
@@ -10,6 +9,7 @@
     <link href="resources/css/menu.css" rel="stylesheet">
     <link href="resources/css/about-us.css" rel="stylesheet">
     <link href="resources/css/op-flip.css" rel="stylesheet">
+    <link href="resources/css/footer.css" rel="stylesheet">
     <link href="resources/pic/BM-Logo.ico" rel="icon">
     <script src="resources/js/ban-some-functions.js"></script>
 </head>
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about-us.html">关于我们</a></li>
-            <li><a href="https://status.blue-millennium.fun/">服务情况</a></li>
+            <li><a href="https://status.blue-millennium.fun" target="_blank">服务情况</a></li>
             <li>
                 <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
             </li>
@@ -135,6 +135,9 @@
 </main>
 <footer>
     <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
+    <a class="text-blue" href="https://github.com/Blue-Millennium" target="_blank">GitHub</a>
+    <a>&emsp;</a>
+    <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite组织官网</a>
 </footer>
 </body>
 <script src="resources/js/op-flip.js"></script>
