refactor: 调整资源文件路径和目录结构
- 更新了 about-us.html 和 index.html 中的资源文件路径
- 将 icon.css 从 resources/css 移动到 resources/css/public
- 更新了团队成员图片路径，使用相对路径访问
- 调整了脚本文件路径，使用相对路径访问

--- a/about-us.html
+++ b/about-us.html
@@ -5,13 +5,13 @@
     <title>Blue-Millennium | 关于我们</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-    <link href="resources/css/icon.css" rel="stylesheet">
-    <link href="resources/css/menu.css" rel="stylesheet">
-    <link href="resources/css/about-us.css" rel="stylesheet">
-    <link href="resources/css/op-flip.css" rel="stylesheet">
-    <link href="resources/css/footer.css" rel="stylesheet">
-    <link href="resources/pic/BM-Logo.ico" rel="icon">
-    <script src="resources/js/ban-some-functions.js"></script>
+    <link href="resources/css/public/icon.css" rel="stylesheet">
+    <link href="resources/css/public/menu.css" rel="stylesheet">
+    <link href="resources/css/private/about-us/about-us.css" rel="stylesheet">
+    <link href="resources/css/private/about-us/op-flip.css" rel="stylesheet">
+    <link href="resources/css/public/footer.css" rel="stylesheet">
+    <link href="resources/pic/public/BM-Logo.ico" rel="icon">
+    <script src="resources/js/public/ban-some-functions.js"></script>
 </head>
 <body>
 <header>
@@ -39,7 +39,7 @@
         <h2>我们的团队</h2>
         <div id="team-members-container">
             <div class="team-member">
-                <img alt="服主" src="resources/pic/OP/Suisuroru.jpg">
+                <img alt="服主" src="resources/pic/private/about-us/OP/Suisuroru.jpg">
                 <h3>Suisuroru</h3>
                 <p>服主</p>
                 <div class="social-icons">
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img alt="副服主1" src="resources/pic/OP/Xianyu.jpg">
+                <img alt="副服主1" src="resources/pic/private/about-us/OP/Xianyu.jpg">
                 <h3>☆星咸鱼♪</h3>
                 <p>副服主</p>
                 <div class="social-icons">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img alt="副服主2" src="resources/pic/OP/Tohka.jpg">
+                <img alt="副服主2" src="resources/pic/private/about-us/OP/Tohka.jpg">
                 <h3>Tohka</h3>
                 <p>副服主</p>
                 <div class="social-icons">
@@ -69,22 +69,22 @@
                 </div>
             </div>
             <div class="team-member">
-                <img alt="管理员1" src="resources/pic/OP/Aris.jpg">
+                <img alt="管理员1" src="resources/pic/private/about-us/OP/Aris.jpg">
                 <h3>夏泽千翼Novice</h3>
                 <p>主要管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员2" src="resources/pic/OP/BigSevenFox.jpg">
+                <img alt="管理员2" src="resources/pic/private/about-us/OP/BigSevenFox.jpg">
                 <h3>华花·门子</h3>
                 <p>主要管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员3" src="resources/pic/OP/Ayanamiii.jpg">
+                <img alt="管理员3" src="resources/pic/private/about-us/OP/Ayanamiii.jpg">
                 <h3>……………………</h3>
                 <p>主要管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员4" src="resources/pic/OP/Super.jpg">
+                <img alt="管理员4" src="resources/pic/private/about-us/OP/Super.jpg">
                 <h3>真寻だいすき</h3>
                 <p>管理员</p>
                 <div class="social-icons">
@@ -93,27 +93,27 @@
                 </div>
             </div>
             <div class="team-member">
-                <img alt="管理员5" src="resources/pic/OP/Panzi.jpg">
+                <img alt="管理员5" src="resources/pic/private/about-us/OP/Panzi.jpg">
                 <h3>潘子</h3>
                 <p>管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员6" src="resources/pic/OP/YC.jpg">
+                <img alt="管理员6" src="resources/pic/private/about-us/OP/YC.jpg">
                 <h3>银河球棒侠</h3>
                 <p>管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员7" src="resources/pic/OP/yucdRPG.gif">
+                <img alt="管理员7" src="resources/pic/private/about-us/OP/yucdRPG.gif">
                 <h3>yucdRPG</h3>
                 <p>特殊管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员8" src="resources/pic/OP/Sunaookami.jpg">
+                <img alt="管理员8" src="resources/pic/private/about-us/OP/Sunaookami.jpg">
                 <h3>Sunaookami</h3>
                 <p>群聊管理员</p>
             </div>
             <div class="team-member">
-                <img alt="管理员9" src="resources/pic/OP/KFACBT.jpg">
+                <img alt="管理员9" src="resources/pic/private/about-us/OP/KFACBT.jpg">
                 <h3>KFACBT</h3>
                 <p>网站开发者</p>
                 <div class="social-icons">
@@ -140,5 +140,5 @@
     <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite组织官网</a>
 </footer>
 </body>
-<script src="resources/js/op-flip.js"></script>
+<script src="resources/js/private/about-us/op-flip.js"></script>
 </html>
