--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Blue-Millennium | 首页</title>
-    <link href="resources/pic/BM-Logo.ico" rel="icon">
-    <link href="resources/css/styles.css" rel="stylesheet">
-    <link href="resources/css/menu.css" rel="stylesheet">
-    <link href="resources/css/footer.css" rel="stylesheet">
-    <script src="resources/js/ban-some-functions.js"></script>
-    <script src="resources/js/join-us-button.js"></script>
+    <link href="resources/pic/public/BM-Logo.ico" rel="icon">
+    <link href="resources/css/private/index/index.css" rel="stylesheet">
+    <link href="resources/css/public/menu.css" rel="stylesheet">
+    <link href="resources/css/public/footer.css" rel="stylesheet">
+    <script src="resources/js/public/ban-some-functions.js"></script>
+    <script src="resources/js/private/index/join-us-button.js"></script>
 </head>
 <body>
 <header>
@@ -27,7 +27,7 @@
     <div class="title"><span class="text-white">欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span
             class="text-white">服务器！</span></div>
 </div>
-<img alt="背景图片" src="resources/pic/bg.png">
+<img alt="背景图片" src="resources/pic/private/index/bg.png">
 <div class="custom-button">加入我们</div>
 <footer class="fixed">
     <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
