feat: 添加邮箱联系方式并调整页面布局
- 在 about-us.html 和 index.html 中添加了邮箱联系方式

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <a class="text-blue" href="https://github.com/Blue-Millennium" target="_blank">GitHub</a>
     <a>&emsp;</a>
     <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite组织官网</a>
+    <a>&emsp;</a>
+    <a class="text-blue" href="mailto:suisuroru@blue-millennium.fun">联系我们[Email]</a>
 </footer>
 </body>
 </html>
