--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a>&emsp;</a>
     <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite组织官网</a>
     <a>&emsp;</a>
-    <a class="text-blue" href="mailto:suisuroru@blue-millennium.fun">联系我们[Email]</a>
+    <a class="text-blue" href="mailto:suisuroru@blue-millennium.fun">联系我们</a>
 </footer>
 </body>
 </html>
