--- a/about-us.html
+++ b/about-us.html
@@ -28,12 +28,16 @@
 </header>
 <main>
     <section class="hero">
-        <h1>欢迎来到 Blue-Millennium</h1>
-        <p>这里是关于我们的介绍页面。</p>
+        <div class="title"><span>欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span>服务器！</span>
+        </div>
+    </section>
+    <h2 class="text-blue">我们的故事，才刚刚开始！</h2>
+    <section class="hero">
+        <div class="title"><span>关于我们</span></div>
     </section>
     <section class="content">
-        <h2>我们的故事，才刚刚开始！</h2>
-        <p>Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月4日正式成立。</p>
+        <p>Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月7日正式开始初期运营。</p>
+        <span class="secret">偷偷告诉你哦，我们在2024年5月4日就已经成立了我们现在的前身，当时还叫南湖心理咨询室呢。</span>
     </section>
     <section class="team">
         <h2>我们的团队</h2>
