fix: 微调链接文字

--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about-us.html">关于我们</a></li>
-            <li><a href="https://status.blue-millennium.fun" target="_blank">服务情况</a></li>
+            <li><a href="https://status.blue-millennium.fun" target="_blank">状态信息</a></li>
             <li>
                 <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7">加入我们</a>
             </li>
@@ -141,7 +141,7 @@
     <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
     <a class="text-blue" href="https://github.com/Blue-Millennium" target="_blank">GitHub</a>
     <a>&emsp;</a>
-    <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite组织官网</a>
+    <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite 组织官网</a>
     <a>&emsp;</a>
     <a class="text-blue" href="mailto:suisuroru@blue-millennium.fun">联系我们</a>
 </footer>
