--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,8 @@
             <li><a href="about-us.html">关于我们</a></li>
             <li><a href="https://stats.blue-millennium.fun" target="_blank">状态信息</a></li>
             <li>
-                <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7" target="_blank">加入我们</a>
+                <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7"
+                   target="_blank">加入我们</a>
             </li>
         </ul>
     </nav>
