refactor(navigation): 重构导航菜单并添加动态生成逻辑
- 移除手动编写的导航菜单 HTML 结构
- 新增 menu.js 文件，实现导航菜单的动态生成
- 在 about-us.html 和 index.html 中引入 menu.js
- 优化代码结构，提高可维护性和可扩展性

--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
     <link href="resources/css/public/menu.css" rel="stylesheet">
     <link href="resources/css/public/footer.css" rel="stylesheet">
     <script src="resources/js/public/some-common-functions.js"></script>
+    <script src="resources/js/public/menu.js"></script>
     <script src="resources/js/private/index/join-us-button.js"></script>
 </head>
 <body>
 <header>
     <nav class="menu">
-        <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="about-us.html">关于我们</a></li>
-            <li><a href="https://stats.blue-millennium.fun" target="_blank">状态信息</a></li>
-            <li><a href="https://map.blue-millennium.fun" target="_blank">轨交线路图</a></li>
-            <li>
-                <a href="https://qm.qq.com/cgi-bin/qm/qr?k=N8TldcldaRkQXGFlXc_mTeYxqMnJ95es&jump_from=webapi&authKey=9rsk7N8LLGLdzwkoAO/qCZmPc4JaOfGbcGRfjFWgmkAdC1CbfDe7qifhu4FXtCf7"
-                   target="_blank">加入我们</a>
-            </li>
+        <ul id="nav-list">
         </ul>
     </nav>
 </header>
