refactor<footer>: 重构网页底部版权栏
- 将 footer内容提取到单独的脚本文件 foot.js 中
- 通过 JavaScript 动态生成 footer 元素，提高代码复用性
- 添加 id="footer" 以便于脚本选择器使用
- 优化了 footer 样式和布局

--- a/about-us.html
+++ b/about-us.html
@@ -14,6 +14,7 @@
     <script src="resources/js/private/about-us/op-flip.js"></script>
     <script src="resources/js/public/some-common-functions.js"></script>
     <script src="resources/js/public/menu.js"></script>
+    <script src="resources/js/public/foot.js"></script>
 </head>
 <body>
 <header>
@@ -128,13 +129,7 @@
         </div>
     </section>
 </main>
-<footer>
-    <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
-    <a class="text-blue" href="https://github.com/Blue-Millennium" target="_blank">GitHub</a>
-    <a>&emsp;</a>
-    <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite 组织官网</a>
-    <a>&emsp;</a>
-    <a class="text-blue" href="mailto:suisuroru@blue-millennium.fun">联系我们</a>
+<footer id="footer">
 </footer>
 </body>
 </html>
