--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="resources/css/public/footer.css" rel="stylesheet">
     <script src="resources/js/public/some-common-functions.js"></script>
     <script src="resources/js/public/menu.js"></script>
+    <script src="resources/js/public/foot.js"></script>
     <script src="resources/js/private/index/join-us-button.js"></script>
 </head>
 <body>
@@ -24,13 +25,7 @@
 </div>
 <img alt="背景图片" src="resources/pics/private/index/bg.png">
 <div class="custom-button">加入我们</div>
-<footer class="fixed">
-    <p>&copy; 2024 Blue-Millennium. All rights reserved.</p>
-    <a class="text-blue" href="https://github.com/Blue-Millennium" target="_blank">GitHub</a>
-    <a>&emsp;</a>
-    <a class="text-blue" href="https://tunite.cn" target="_blank">Tunite 组织官网</a>
-    <a>&emsp;</a>
-    <a class="text-blue" href="mailto:suisuroru@blue-millennium.fun">联系我们</a>
+<footer class="fixed" id="footer">
 </footer>
 </body>
 </html>
