Revert "refactor(map): 更新地图服务地址"
This reverts commit 49366d318e84e1d5bbfbb80232df3380842e413c.

--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 </header>
-    <iframe src="https://map.blue-millennium.fun" title="模组服运行线路图"></iframe>
+    <iframe src="http://mix.origin.blue-millennium.fun:8888" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
