style:优化 HTML 和 JavaScript代码格式
- 使用一致的空格和缩进
- 修复 meta 标签格式问题
- 添加 allow 属性到 iframe
- 优化 JavaScript 对象定义

--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Blue-Millennium | 轨交线路图</title>
     <link href="resources/pics/public/BM-Logo.ico" rel="icon">
     <link href="resources/css/public/menu.css" rel="stylesheet">
@@ -14,12 +14,12 @@
 </head>
 <body>
 <header>
-  <nav class="menu">
-    <ul id="nav-list">
-    </ul>
-  </nav>
+    <nav class="menu">
+        <ul id="nav-list">
+        </ul>
+    </nav>
 </header>
-    <iframe src="http://mix.origin.blue-millennium.fun:8888" title="模组服运行线路图"></iframe>
+<iframe allow="insecure-requests" src="http://mix.origin.blue-millennium.fun:8888" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
