refactor(map): 更新地图服务地址
- 将 iframe 的 src属性从旧的不安全的 HTTP 地址修改为新的 HTTPS地址
- 删除了多余的 allow="insecure-requests" 属性

--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
 </header>
-<iframe allow="insecure-requests" src="http://mix.origin.blue-millennium.fun:8888" allow="insecure-requests" title="模组服运行线路图"></iframe>
+<iframe allow="insecure-requests" src="https://map.blue-millennium.fun" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
