--- a/map.html
+++ b/map.html
@@ -2,15 +2,15 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Blue-Millennium | 轨交线路图</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="resources/pics/public/BM-Logo.ico" rel="icon">
     <link href="resources/css/public/menu.css" rel="stylesheet">
     <link href="resources/css/public/footer.css" rel="stylesheet">
     <script src="resources/js/public/some-common-functions.js"></script>
     <script src="resources/js/public/menu.js"></script>
     <script src="resources/js/public/foot.js"></script>
-    <link href="resources/css/private/map/iframe.css" rel="stylesheet">
+    <link href="resources/css/private/map/sandbox.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -19,8 +19,12 @@
         </ul>
     </nav>
 </header>
-<iframe allow="insecure-requests" src="https://map.blue-millennium.fun" title="模组服运行线路图"></iframe>
-<footer class="fixed" id="footer">
+<div id="iframe-container">
+    <object data="http://mix.origin.blue-millennium.fun:8888" type="text/html" title="模组服运行线路图">
+        <embed src="http://mix.origin.blue-millennium.fun:8888" type="text/html" />
+    </object>
+</div>
+   <footer class="fixed" id="footer">
 </footer>
 </body>
 </html>
