style(map): 优化地图页面布局和样式
- 更新 map.html 中 object 和 embed 标签的属性顺序
- 修正 footer 标签的缩进
- 在 sandbox.css 中添加空行和调整选择器格式，提高可读性

--- a/map.html
+++ b/map.html
@@ -20,11 +20,11 @@
     </nav>
 </header>
 <div id="iframe-container">
-    <object data="http://mix.origin.blue-millennium.fun:8888" type="text/html" title="模组服运行线路图">
-        <embed src="http://mix.origin.blue-millennium.fun:8888" type="text/html" />
+    <object data="//mix.origin.blue-millennium.fun:8888" title="模组服运行线路图" type="text/html">
+        <embed src="//mix.origin.blue-millennium.fun:8888" type="text/html"/>
     </object>
 </div>
-   <footer class="fixed" id="footer">
+<footer class="fixed" id="footer">
 </footer>
 </body>
 </html>
