refactor(map): 更新地图服务地址
- 将地图服务地址从 //mix.origin.blue-millennium.fun:8888 修改为 https://map.server2.blue-millennium.fun
- 此更新确保了地图服务的正确加载和显示

--- a/map.html
+++ b/map.html
@@ -20,8 +20,8 @@
     </nav>
 </header>
 <div id="iframe-container">
-    <object data="//mix.origin.blue-millennium.fun:8888" title="模组服运行线路图" type="text/html">
-        <embed src="//mix.origin.blue-millennium.fun:8888" type="text/html"/>
+    <object data="https://map.server2.blue-millennium.fun" title="模组服运行线路图" type="text/html">
+        <embed src="https://map.server2.blue-millennium.fun" type="text/html"/>
     </object>
 </div>
 <footer class="fixed" id="footer">
