--- a/map.html
+++ b/map.html
@@ -20,8 +20,8 @@
     </nav>
 </header>
 <div id="iframe-container">
-    <object data="https://map.server2.blue-millennium.fun" title="模组服运行线路图" type="text/html">
-        <embed src="https://map.server2.blue-millennium.fun" type="text/html"/>
+    <object data="https://map.blue-millennium.fun" title="模组服运行线路图" type="text/html">
+        <embed src="https://map.blue-millennium.fun" type="text/html"/>
     </object>
 </div>
 <footer class="fixed" id="footer">
