--- a/map.html
+++ b/map.html
@@ -19,11 +19,7 @@
         </ul>
     </nav>
 </header>
-<div id="iframe-container">
-    <object data="https://map.blue-millennium.fun" title="模组服运行线路图" type="text/html">
-        <embed src="https://map.blue-millennium.fun" type="text/html"/>
-    </object>
-</div>
+<iframe src="https://map.blue-millennium.fun" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
