--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 </head>
 <body>
 <header>
-    <button class="hamburger" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-    <nav>
+    <nav class="menu">
         <ul id="nav-list">
         </ul>
     </nav>
