feat(menu): 增加汉堡按钮并优化菜单样式
- 在 about-us.html、map.html、map-1.html 和 map-2.html 中添加汉堡按钮
- 更新 menu.css 中的菜单样式，包括文字颜色、布局和动画效果

--- a/map-1.html
+++ b/map-1.html
@@ -14,7 +14,12 @@
 </head>
 <body>
 <header>
-    <nav class="menu">
+    <button class="hamburger" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav>
         <ul id="nav-list">
         </ul>
     </nav>
