--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,12 @@
 </head>
 <body>
 <header>
-    <nav class="menu">
+    <button class="hamburger" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav>
         <ul id="nav-list">
         </ul>
     </nav>
