--- a/map-2.html
+++ b/map-2.html
@@ -14,7 +14,12 @@
 </head>
 <body>
 <header>
-    <nav class="menu">
+    <button class="hamburger" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav>
         <ul id="nav-list">
         </ul>
     </nav>
