--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header>
-    <button class="hamburger" aria-label="Toggle navigation">
+    <button aria-label="Toggle navigation" class="hamburger">
         <span></span>
         <span></span>
         <span></span>
