refactor(menu): 更新菜单项和页面标题
- 将"模组服轨交线路图"菜单项的链接从 map.html 改为 map-2.html
- 更新页面标题为 "Blue-Millennium | 模组服轨交线路图"

--- a/map-1.html
+++ b/map-1.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Blue-Millennium | 轨交线路图</title>
+    <title>Blue-Millennium | 模组服轨交线路图</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="resources/pics/public/BM-Logo.ico" rel="icon">
     <link href="resources/css/public/menu.css" rel="stylesheet">
