--- a/map-2.html
+++ b/map-2.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Blue-Millennium | 轨交线路图</title>
+    <title>Blue-Millennium | 模组服轨交线路图</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="resources/pics/public/BM-Logo.ico" rel="icon">
     <link href="resources/css/public/menu.css" rel="stylesheet">
