refactor(map): 更新地图服务地址
- 移除地图 URL 中的 "origin" 子域名- 统一更新 map.html、map-1.html 和 map-2.html 文件中的 iframe 源地址

--- a/map-1.html
+++ b/map-1.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
 </header>
-<iframe src="https://map.server2.origin.blue-millennium.fun" title="模组服运行线路图"></iframe>
+<iframe src="https://map.server2.blue-millennium.fun" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
