--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
 </header>
-<iframe src="https://map.server2.origin.blue-millennium.fun" title="模组服运行线路图"></iframe>
+<iframe src="https://map.server2.blue-millennium.fun" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
