--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@
     <script src="resources/js/public/foot.js"></script>
 </head>
 <body>
-<header>
+<header data-text-color="#000">
     <button aria-label="Toggle navigation" class="hamburger">
         <span></span>
         <span></span>
