--- a/map-1.html
+++ b/map-1.html
@@ -10,10 +10,10 @@
     <script src="resources/js/public/some-common-functions.js"></script>
     <script src="resources/js/public/menu.js"></script>
     <script src="resources/js/public/foot.js"></script>
-    <link href="resources/css/private/map/iframe.css" rel="stylesheet">
+    <link href="resources/css/private/map-2/iframe.css" rel="stylesheet">
 </head>
 <body>
-<header>
+<header data-text-color="#000">
     <button aria-label="Toggle navigation" class="hamburger">
         <span></span>
         <span></span>
@@ -24,7 +24,6 @@
         </ul>
     </nav>
 </header>
-<iframe src="https://map2origin.blue-millennium.fun" title="模组服运行线路图"></iframe>
 <footer class="fixed" id="footer">
 </footer>
 </body>
