docs(update): 更新版本日志

--- a/update.html
+++ b/update.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
 </header>
-<p>暂无更新日志</p>
+<p>原版服务器已于5.3正式关闭，已被5.4上线的小游戏服务器代替</p>
 <footer class="fixed" id="footer">
 </footer>
 </body>
