chore(update): 优化更新日志格式和动画效果
- 更新日志内容格式化为数组形式
- 添加 TODO.json 文件用于记录未来更新计划
- 优化更新日志 CSS 动画效果
- 调整 about-us.html 页面布局

--- a/about-us.html
+++ b/about-us.html
@@ -33,14 +33,15 @@
         <div class="title"><span>欢迎来到</span> <span class="text-blue">Blue-Millennium</span> <span>服务器！</span>
         </div>
     </section>
-<!--    <h2 class="text-blue">我们的故事，才刚刚开始！</h2>-->
+    <!--    <h2 class="text-blue">我们的故事，才刚刚开始！</h2>-->
     <section class="hero">
         <div class="title"><span>关于我们</span></div>
     </section>
     <section class="content">
         <p>Blue-Millennium不再以任何游戏作为主题，自由与创造将作为服务器的主题。</p>
-        <span class="notUseAnymore">Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月7日正式开始初期运营。</span><p>
-        <span class="secret">偷偷告诉你哦，我们在2024年5月4日就已经成立了我们现在的前身，当时还叫南湖心理咨询室呢。</span>
+        <span class="notUseAnymore">Blue-Millennium是一个以蔚蓝档案为主题的服务器，于2024年5月7日正式开始初期运营。</span>
+        <p>
+            <span class="secret">偷偷告诉你哦，我们在2024年5月4日就已经成立了我们现在的前身，当时还叫南湖心理咨询室呢。</span>
     </section>
     <section class="team">
         <h2>我们的团队</h2>
