--- a/update.html
+++ b/update.html
@@ -27,8 +27,8 @@
     </nav>
 </header>
 <div class="update-log-container">
-    <h1>更新日志</h1>
-    <div id="update-log" class="update-log animated-log"></div> <!-- 添加动画类 -->
+    <h1>更新日志 - 自2025年5月起</h1>
+    <div class="update-log animated-log" id="update-log"></div>
 </div>
 <footer class="fixed" id="footer">
 </footer>
